    - Closes #4513.
  - Fix ruin hours not being shown properly in the town status screen.
    - Closes #4534.
  - Move neutral setting to Government, allowing Towns to become neutral.
    - New permission node: towny.command.town.toggle.neutral.
    - No command to manipulate this setting as of yet.
  - API: Added NewHourEvent
  - New Command: /t toggle neutral|peaceful
    - Toggles a town's neutral status.
    - Otherwise unused for now.
  - API: Added TownToggleNeutralEvent.
  - Fix Sender cannot be null! message seen when outlaw add/remove is done on an offline player.
  - Fix NewHourEvent async.
  - Fix /n kick tab complete populated with non-nation towns.
    - Closes #4542.
  - Fix improper message being shown when trying to kick a mayor of another town from your town.
    - Closes #4541.
  - Fix/Improve Town Toggle Events, courtesy of silverwolfg11 with PR #4543.
  - Fix tag commands not giving correct feedback.
  - Fix /n set tag missing a tabcompleter.
    - Closes #4540.
  - Fix nations and towns being able to send an invite to towns and residents which are already members.
    - Closes #4539.
  - Fix nationrank add/remove commands failing when the command sender fails to use the proper casing.
    - Closes #4538.
  - Rework town and nation withdraw/deposit to reduce redundancies.
  - Add space to ranks separator, courtesy of illumeleet with PR #4549 (First-Time Contributor!)
  - Fix onPlayerFishEvent double negative, courtesy of Warriorrrr with PR #4547 (First-Time Contributor!)
  - New Config Option: town.default_neutral
    - Default: false
    - Default neutral status of the town (are new towns neutral by default?)
  - Do not shade in jetbrain annotations, courtesy of silverwolfg11 with PR #4528.
0.96.5.5:
  - API: ResidentJailEvent & ResidentUnjailEvent courtesy of Kovalskki with PR #4560 (First-Time Contributor!)
  - Fix plot group's setting plot type showing message for each plot in the group (when there was no cost to set the type.)